# auto-battler

./: README.md  pyproject.toml  sample_data.json
auto_battler/: fetch_data.py  main.py
