[tool.poetry]
name = "auto-battler"
version = "0.1.0"
description = "Auto Battler implementation in python"
authors = ["Derek Rodriguez <derek@derekrodriguez.dev>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "auto_battler"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
